# xfmpc-gtk3

./: .gitignore  CMakeLists.txt  README.md
src/: BottomInterface.cpp  BottomInterface.h  CMakeLists.txt  Functions.cpp  Functions.h  MainWindow.cpp  MainWindow.h  MpdConnection.cpp  MpdConnection.h  PlaceHolder.cpp  PlaceHolder.h  SettingsButtonMenu.cpp  SettingsButtonMenu.h  TopInterface.cpp  TopInterface.h  main.cpp
